tests/sumo/errors/action_step_negative_warning/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --no-step-log  --default.action-step-length=-1.1 --end=1.0

